--- a/css/style.css
+++ b/css/style.css
@@ -98,6 +98,7 @@ body .wrapper .btns {
   -webkit-justify-content: center;
       -ms-flex-pack: center;
           justify-content: center;
+  margin-top: 20px;
 }
 
 body .wrapper .btns button {
@@ -160,10 +161,18 @@ body > div > main > div:nth-child(4) {
     width: 600px;
     padding: 0 20px;
   }
+  body .wrapper header {
+    width: 560px;
+    margin: 0 auto;
+  }
   body .wrapper main {
     -webkit-flex-wrap: wrap;
         -ms-flex-wrap: wrap;
             flex-wrap: wrap;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+        -ms-flex-pack: center;
+            justify-content: center;
   }
   body .wrapper main .card {
     width: 270px;
@@ -198,6 +207,7 @@ body > div > main > div:nth-child(4) {
     -webkit-justify-content: center;
         -ms-flex-pack: center;
             justify-content: center;
+    margin-top: 30px;
   }
   .indicators div.hidden {
     display: none;
@@ -210,6 +220,7 @@ body > div > main > div:nth-child(4) {
 @media screen and (max-width: 600px) {
   body .wrapper {
     padding: 0 20px;
+    width: auto;
   }
   body .wrapper main {
     -webkit-flex-wrap: wrap;
@@ -218,7 +229,7 @@ body > div > main > div:nth-child(4) {
   }
   body .wrapper main .card {
     width: 270px;
-    margin: 0;
+    margin-right: 0;
   }
   body .wrapper main .card:nth-child(odd) {
     margin-right: 20px;
@@ -260,8 +271,8 @@ body > div > main > div:nth-child(4) {
 
 @media screen and (max-width: 599px) {
   body .wrapper {
-    width: 320px;
     padding: 0 10px;
+    width: auto;
   }
   body .wrapper header {
     -webkit-box-orient: vertical;
@@ -273,12 +284,21 @@ body > div > main > div:nth-child(4) {
     -webkit-align-items: flex-start;
         -ms-flex-align: start;
             align-items: flex-start;
+    width: auto;
   }
   body .wrapper header h1 {
     font-size: 24px;
   }
+  body .wrapper main {
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
   body .wrapper main .card {
     width: 300px;
+  }
+  body .wrapper main .card:nth-child(odd) {
     margin-right: 0;
   }
   .indicators div.hidden {
@@ -287,11 +307,17 @@ body > div > main > div:nth-child(4) {
   .indicators div.hidden:last-of-type {
     margin-right: 0;
   }
+  body .wrapper .btns,
+  body .wrapper header {
+    width: 300px;
+    margin: 0 auto;
+  }
 }
 
 @media screen and (max-width: 320px) {
   body .wrapper {
     padding: 0 10px;
+    width: auto;
   }
   body .wrapper header {
     -webkit-box-orient: vertical;
