--- a/css/style.css
+++ b/css/style.css
@@ -176,7 +176,7 @@ body > div > main > div:nth-child(4) {
   }
   body .wrapper main .card {
     width: 270px;
-    margin: 0;
+    margin-top: 10px;
   }
   body .wrapper main .card:nth-child(odd) {
     margin-right: 20px;
